# selene

./: .ccls  .clang-format  .clang-tidy  .gitignore  .gitmodules  .lvimrc  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  DoxygenLayout.xml  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  conanfile.txt  run_clang_format
benchmark/: CMakeLists.txt  explicit_type.cpp  image_access.cpp  image_convolution.cpp
examples/: CMakeLists.txt  Utils.hpp  Utils_old.hpp  class_sizes.cpp  image_access.cpp  image_clone_view.cpp  image_conversion.cpp  image_convolution.cpp  image_generate.cpp  image_io.cpp  image_resample.cpp  image_rotate.cpp  image_transform.cpp  readme_example.cpp
package/test_vcpkg/: CMakeLists.txt  example.cpp
selene/: CMakeLists.txt  _doc.hpp
selene/DEPRECATED_img/: BorderAccessors.hpp  BoundingBox.hpp  Image.hpp  ImageAccess.hpp  ImageData.hpp  ImageDataBase.hpp  ImageDataStorage.hpp  ImageDataToImage.hpp  ImageIterators.hpp  ImageToImageData.hpp  ImageTypeAliases.hpp  Interpolators.hpp  OpenCV.hpp  Pixel.hpp  PixelFormat.cpp  PixelTraits.hpp  PixelTypeAliases.hpp  RelativeAccessor.hpp  RowPointers.hpp  Types.hpp  Utilities.hpp
selene/DEPRECATED_img_io/: IO.cpp  IO.hpp  JPEGRead.cpp  JPEGRead.hpp  JPEGWrite.cpp  JPEGWrite.hpp  PNGRead.cpp  PNGRead.hpp  PNGWrite.cpp  PNGWrite.hpp
selene/DEPRECATED_img_io/impl/: JPEGCommon.hpp  JPEGDetail.cpp  JPEGDetail.hpp  PNGDetail.cpp
selene/DEPRECATED_img_ops/: Algorithms.hpp  ChannelOperations.hpp  ImageConversions.hpp  PixelConversions.cpp  PixelConversions.hpp  Resample.hpp  Transformations.hpp
selene/base/: Allocators.cpp  Allocators.hpp  Assert.hpp  Bitcount.hpp  ExplicitType.hpp  Kernel.hpp  MemoryBlock.hpp  MessageLog.cpp  MessageLog.hpp  Promote.hpp  Round.hpp  Types.hpp  Utils.hpp
selene/base/_impl/: CompressedPair.hpp  ExplicitType.hpp  TypeTraits.hpp  Utils.cpp  Utils.hpp
selene/base/io/: FileReader.hpp  FileUtils.cpp  FileUtils.hpp  FileWriter.hpp  MemoryReader.hpp  MemoryRegion.hpp  MemoryWriter.hpp  VectorReader.hpp  VectorWriter.hpp  WriterMode.hpp
selene/img/: Algorithms.hpp  BorderAccessors.hpp  BoundingBox.hpp  IO.cpp  IO.hpp  Image.hpp  ImageAccess.hpp  ImageData.hpp  ImageDataBase.hpp  ImageDataToImage.hpp  ImageIterators.hpp  ImageToImageData.hpp  ImageTypeAliases.hpp  Interpolators.hpp  JPEGRead.cpp  JPEGRead.hpp  JPEGWrite.cpp  JPEGWrite.hpp  OpenCV.hpp  PNGRead.cpp  PNGWrite.hpp  Pixel.hpp  PixelFormat.cpp  PixelFormat.hpp  PixelTraits.hpp  PixelTypeAliases.hpp  RelativeAccessor.hpp  Resample.hpp  RowPointers.hpp  Types.hpp  Utilities.hpp
selene/img/common/: BoundingBox.hpp  DataPtr.hpp  Iterators.hpp  PixelFormat.cpp  PixelFormat.hpp  RowPointers.hpp  Types.hpp
selene/img/detail/: JPEGDetail.cpp  Util.hpp
selene/img/dynamic/: DynImage.hpp  DynImageIterators.hpp  DynImageView.hpp  StaticChecks.hpp  UntypedLayout.hpp
selene/img/interop/: DynImageToImage.hpp  ImageToDynImage.hpp  OpenCV.hpp
selene/img/pixel/: Pixel.hpp  PixelTraits.hpp  PixelTypeAliases.hpp
selene/img/typed/: Image.hpp  ImageBase.hpp  ImageIterators.hpp  ImageTypeAliases.hpp  ImageView.hpp  ImageViewTypeAliases.hpp  StaticChecks.hpp  TypedLayout.hpp  Utilities.hpp
selene/img2/: BoundingBox.hpp  DynImage.hpp  DynImageIterators.hpp  DynImageView.hpp  Image.hpp  ImageBase.hpp  ImageIterators.hpp  ImageTypeAliases.hpp  ImageView.hpp  ImageViewTypeAliases.hpp  Layout.hpp  Pixel.hpp  PixelFormat.cpp  PixelFormat.hpp  PixelTraits.hpp  PixelTypeAliases.hpp  Types.hpp
selene/img2_ops/: ImageFunctions.hpp
selene/img_io/: IO.cpp  IO.hpp  JPEGCommon.hpp  JPEGRead.cpp  JPEGRead.hpp  JPEGWrite.cpp  JPEGWrite.hpp  PNGRead.cpp  PNGRead.hpp  PNGWrite.cpp  PNGWrite.hpp  TIFFCommon.cpp  TIFFCommon.hpp  TIFFRead.cpp  TIFFRead.hpp  TIFFWrite.cpp  TIFFWrite.hpp
selene/img_io/_impl/: JPEGCommon.hpp  JPEGDetail.cpp  JPEGDetail.hpp  PNGDetail.cpp  TIFFDetail.cpp  TIFFDetail.hpp  TIFFIOFunctions.hpp  TIFFReadHighLevel.cpp  TIFFReadHighLevel.hpp  TIFFReadStrips.cpp  TIFFReadStrips.hpp  (+3 more)
selene/img_ops/: Algorithms.hpp  Allocate.hpp  ChannelOperations.hpp  Clone.hpp  Convolution.hpp  Crop.hpp  DynView.hpp  Fill.hpp  Generate.hpp  ImageConversions.hpp  ImageFunctions.cpp  ImageFunctions.hpp  PixelConversions.cpp  PixelConversions.hpp  Resample.hpp  TransformationDirections.hpp  Transformations.hpp  View.hpp
selene/io/: FileReader.hpp  FileUtils.hpp  FileWriter.hpp  VectorWriter.hpp
selene/old_img/: BorderAccessors.hpp  BoundingBox.hpp  Image.hpp  ImageAccess.hpp  ImageData.hpp  ImageDataBase.hpp  ImageDataToImage.hpp  ImageIterators.hpp  ImageToImageData.hpp  ImageTypeAliases.hpp  Interpolators.hpp  OpenCV.hpp  Pixel.hpp  PixelFormat.cpp  PixelFormat.hpp  PixelTraits.hpp  PixelTypeAliases.hpp  RelativeAccessor.hpp  RowPointers.hpp  Utilities.hpp
selene/old_img_io/: IO.cpp  IO.hpp  JPEGRead.cpp  JPEGRead.hpp  JPEGWrite.cpp  JPEGWrite.hpp  PNGRead.cpp  PNGRead.hpp  PNGWrite.cpp  PNGWrite.hpp
selene/old_img_ops/: Algorithms.hpp  ChannelOperations.hpp  ImageConversions.hpp  PixelConversions.cpp  PixelConversions.hpp  Resample.hpp  Transformations.hpp
selene/thread/: ThreadPool.hpp
src/: CMakeLists.txt  selene-config.cmake
src/selene/: _doc.hpp
test/: CMakeLists.txt  Catch.cpp  Utils.hpp
test/base/: Allocators.cpp  Bitcount.cpp  Round.cpp  Utils.cpp
test/img/: Accessors.cpp  Algorithms.cpp  BorderAccessors.cpp  IO.cpp  IO_JPEG.cpp  IO_PNG.cpp  Image.cpp  ImageAccess.cpp  ImageConversions.cpp  ImageData.cpp  ImageDataToImage.cpp  ImageToImageData.cpp  Interpolators.cpp  OpenCV.cpp  Pixel.cpp  PixelConversions.cpp  Resample.cpp  Transformations.cpp  _TestImages.cpp  _TestImages.hpp
test/img_io/: IO.cpp  IO_JPEG.cpp  IO_PNG.cpp
test/img_ops/: Algorithms.cpp  ImageConversions.cpp  PixelConversions.cpp  Resample.cpp  Transformations.cpp
test/io/: IO.cpp
test/selene/: CMakeLists.txt  Catch.cpp  Utils.hpp
test/thread/: ThreadPool.cpp
test/utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
wrappers/fs/: CMakeLists.txt  CMakeLists_build_boost_fs.txt  Filesystem.hpp
(+306 files in other folders)
